# jobstream

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  new_feature_template.md
apps/api/src/api/: main.py
apps/collector/: pyproject.toml
apps/collector/src/collector/: main.py  producer.py
apps/collector/src/collector/sources/common/: base.py  client.py
apps/collector/src/collector/sources/company/: naver.py  toss.py
apps/collector/src/collector/sources/saramin/: crawler.py  parser.py
apps/processor/src/processor/: consumer.py  main.py  normalizer.py  save_to_db.py  skill_extractor.py  storage.py  validator.py
database/: schema.sql
pipelines/airflow/dags/: job_ingestion.py
